--- a/debop4s-timeperiod/pom.xml
+++ b/debop4s-timeperiod/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>debop4s-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>debop4s</groupId>
+            <artifactId>debop4s-time</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
