-. group id 를 kr.debop4s 로 변경.

--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>debop4s-parent</artifactId>
-        <groupId>debop4s</groupId>
+        <groupId>kr.debop4s</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>debop4s</groupId>
+            <groupId>kr.debop4s</groupId>
             <artifactId>debop4s-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
