-. java 로 사용할 경우를 대비하여 java용 테스트 코드 추가.

--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>spring-beans</artifactId>
         </dependency>
 
+        <!-- Guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+        </dependency>
+
         <!-- 암호화 -->
         <dependency>
             <groupId>org.jasypt</groupId>
