-. 메일 발송 예제 추가.

--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -35,6 +35,13 @@
             <artifactId>commons-collections</artifactId>
         </dependency>
 
+        <!-- Mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+
         <!-- Spring framework -->
         <dependency>
             <groupId>org.springframework</groupId>
