--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>spring-beans</artifactId>
         </dependency>
 
+        <!-- Spring Scala -->
+        <dependency>
+            <groupId>org.springframework.scala</groupId>
+            <artifactId>spring-scala</artifactId>
+        </dependency>
+
         <!-- Guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
