-. AbstractJpaConfiguration, AbstractHibernateConfiguration 파일에 Spring의 JdbcTemplate 를 Bean으로 추가.

--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -18,6 +18,12 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <!-- Spring Scala -->
+        <dependency>
+            <groupId>org.springframework.scala</groupId>
+            <artifactId>spring-scala</artifactId>
+        </dependency>
+
         <!-- Spring JPA -->
         <dependency>
             <groupId>org.springframework.data</groupId>
