--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ project/plugins/project/
 
 # Scala-IDE specific
 .scala_dependencies
+.project
+.classpath
+.cache
+.settings
 
 # IntelliJ
 .idea
