--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -86,7 +86,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Hibernate 2nd cache -->
+        <!-- Hibernate 2nd client -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-ehcache</artifactId>
