--- a/debop4s-redis/pom.xml
+++ b/debop4s-redis/pom.xml
@@ -26,9 +26,48 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <!-- Akka -->
         <dependency>
-            <groupId>net.debasishg</groupId>
-            <artifactId>redisclient_2.10</artifactId>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.10</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-testkit_2.10</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JPA -->
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+        </dependency>
+
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-testing</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Redis Client for Scala -->
+        <dependency>
+            <groupId>com.etaty.rediscala</groupId>
+            <artifactId>rediscala_2.10</artifactId>
         </dependency>
     </dependencies>
+
 </project>
