--- a/pom.xml
+++ b/pom.xml
@@ -79,18 +79,6 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <!-- joda-time -->
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.joda</groupId>
-            <artifactId>joda-convert</artifactId>
-            <version>1.5</version>
-        </dependency>
-
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
@@ -124,8 +112,6 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
     <dependencyManagement>
@@ -613,7 +599,7 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- Hibernate 2nd cache -->
+            <!-- Hibernate 2nd client -->
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-ehcache</artifactId>
@@ -663,6 +649,7 @@
                 <artifactId>querydsl-scala</artifactId>
                 <version>${querydsl.version}</version>
             </dependency>
+
             <!-- MongoDB -->
             <dependency>
                 <groupId>org.mongodb</groupId>
@@ -670,18 +657,11 @@
                 <version>2.11.3</version>
             </dependency>
 
-            <!-- EhCache -->
+            <!-- Redis Client for Scala -->
             <dependency>
-                <groupId>net.sf.ehcache</groupId>
-                <artifactId>ehcache-core</artifactId>
-                <version>2.6.6</version>
-            </dependency>
-
-            <!-- Redis -->
-            <dependency>
-                <groupId>net.debasishg</groupId>
-                <artifactId>redisclient_2.10</artifactId>
-                <version>2.11</version>
+                <groupId>com.etaty.rediscala</groupId>
+                <artifactId>rediscala_2.10</artifactId>
+                <version>1.3</version>
             </dependency>
 
             <!-- Memcached -->
