-. hibernate-redis by scala and akka 구현 완료. 테스트 준비 중.

--- a/debop4s-redis/pom.xml
+++ b/debop4s-redis/pom.xml
@@ -37,6 +37,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+        </dependency>
+
         <!-- JPA -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
