-. scala 용 JacksonSerializer module 추가. -. Spring Cache 용 Cahce Manager 제작 -. logback 로그를 Redis에 저장하는 RedisLogAppender, RedisLogPubSub 제작

--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -94,6 +94,7 @@
             <artifactId>joda-convert</artifactId>
         </dependency>
 
+
         <!-- GSON -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -112,6 +113,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
+        </dependency>
+
+        <!-- Jackson for Scala -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-scala_${scala.main.version}</artifactId>
         </dependency>
 
         <!-- Model Mapper -->
