--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <properties>
         <jdk.version>1.7</jdk.version>
         <scala.version>2.10.3</scala.version>
+        <scala.main.version>2.10</scala.main.version>
 
         <springframework.version>4.0.2.RELEASE</springframework.version>
         <hibernate.version>4.3.1.Final</hibernate.version>
@@ -35,23 +36,24 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-reflect</artifactId>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-actors</artifactId>
-            <version>${scala.version}</version>
         </dependency>
 
         <!-- ScalaTest -->
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.10</artifactId>
+            <artifactId>scalatest_${scala.main.version}</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -130,6 +132,11 @@
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
+                <artifactId>scala-reflect</artifactId>
+                <version>${scala.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scala-lang</groupId>
                 <artifactId>scala-actors</artifactId>
                 <version>${scala.version}</version>
             </dependency>
@@ -137,12 +144,12 @@
             <!-- Akka -->
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-actor_2.10</artifactId>
+                <artifactId>akka-actor_${scala.main.version}</artifactId>
                 <version>2.2.3</version>
             </dependency>
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
-                <artifactId>akka-testkit_2.10</artifactId>
+                <artifactId>akka-testkit_${scala.main.version}</artifactId>
                 <version>2.2.3</version>
                 <scope>test</scope>
             </dependency>
@@ -286,6 +293,13 @@
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-joda</artifactId>
                 <version>2.2.3</version>
+            </dependency>
+
+            <!-- Jackson for Scala -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-scala_${scala.main.version}</artifactId>
+                <version>2.3.0</version>
             </dependency>
 
             <!-- ASM -->
@@ -660,7 +674,7 @@
             <!-- Redis Client for Scala -->
             <dependency>
                 <groupId>com.etaty.rediscala</groupId>
-                <artifactId>rediscala_2.10</artifactId>
+                <artifactId>rediscala_${scala.main.version}</artifactId>
                 <version>1.3</version>
             </dependency>
 
@@ -778,7 +792,7 @@
             <!-- ScalaTest -->
             <dependency>
                 <groupId>org.scalatest</groupId>
-                <artifactId>scalatest_2.10</artifactId>
+                <artifactId>scalatest_${scala.main.version}</artifactId>
                 <version>2.0</version>
                 <scope>test</scope>
             </dependency>
