--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <!--<module>github-time</module>-->
         <module>debop4s-core</module>
         <module>debop4s-timeperiod</module>
-        <module>debop4s-data</module>
         <module>debop4s-redis</module>
+        <module>debop4s-cassandra</module>
+        <module>debop4s-data</module>
     </modules>
 
     <properties>
@@ -678,11 +678,11 @@
                 <version>1.3</version>
             </dependency>
 
-            <!-- Memcached -->
+            <!-- Cassandra -->
             <dependency>
-                <groupId>com.googlecode.xmemcached</groupId>
-                <artifactId>xmemcached</artifactId>
-                <version>1.4.3</version>
+                <groupId>com.datastax.cassandra</groupId>
+                <artifactId>cassandra-driver-core</artifactId>
+                <version>2.0.0-rc3</version>
             </dependency>
 
             <!-- Tomcat Connection Pool -->
