-. debop4s-data hibernate 관련 usertype 구현

--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -13,6 +13,8 @@
     <name>data</name>
 
     <dependencies>
+
+        <!-- debop4s -->
         <dependency>
             <groupId>com.github.debop4s</groupId>
             <artifactId>debop4s-core</artifactId>
