--- a/debop4s-redis/pom.xml
+++ b/debop4s-redis/pom.xml
@@ -15,6 +15,7 @@
 
     <dependencies>
 
+        <!-- debop4s -->
         <dependency>
             <groupId>com.github.debop4s</groupId>
             <artifactId>debop4s-core</artifactId>
