--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>debop4s-redis</module>
         <module>debop4s-cassandra</module>
         <module>debop4s-data</module>
+        <module>debop4s-hazelcast</module>
     </modules>
 
     <properties>
@@ -271,28 +272,21 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- GSON -->
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>2.2.4</version>
-            </dependency>
-
             <!-- Jackson JSON Serializer -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>2.2.3</version>
+                <version>2.3.0</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.2.3</version>
+                <version>2.3.0</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-joda</artifactId>
-                <version>2.2.3</version>
+                <version>2.3.0</version>
             </dependency>
 
             <!-- Jackson for Scala -->
