--- a/debop4s-hazelcast/pom.xml
+++ b/debop4s-hazelcast/pom.xml
@@ -9,11 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>debop4s-cassandra</artifactId>
-    <name>cassandra</name>
+    <artifactId>debop4s-hazelcast</artifactId>
 
     <dependencies>
-
         <!-- debop4s -->
         <dependency>
             <groupId>com.github.debop4s</groupId>
@@ -26,12 +24,12 @@
             <version>${project.parent.version}</version>
         </dependency>
 
-        <!-- Cassandra -->
         <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-driver-core</artifactId>
-            <version>2.0.0-rc3</version>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>3.2-RC1</version>
         </dependency>
 
     </dependencies>
+
 </project>
