--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -29,8 +29,8 @@
             <artifactId>commons-compress</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-pool</groupId>
-            <artifactId>commons-pool</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
