--- a/pom.xml
+++ b/pom.xml
@@ -172,9 +172,9 @@
                 <version>1.5</version>
             </dependency>
             <dependency>
-                <groupId>commons-pool</groupId>
-                <artifactId>commons-pool</artifactId>
-                <version>1.6</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>2.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
