--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <module>debop4s-timeperiod</module>
         <module>debop4s-redis</module>
         <module>debop4s-cassandra</module>
-        <module>debop4s-data</module>
         <module>debop4s-hazelcast</module>
+        <module>debop4s-data</module>
     </modules>
 
     <properties>
@@ -396,17 +396,17 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.5</version>
+                <version>1.7.6</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.5</version>
+                <version>1.7.6</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
-                <version>1.7.5</version>
+                <version>1.7.6</version>
             </dependency>
 
             <!-- Commons Logging -->
@@ -687,18 +687,32 @@
                 <scope>provided</scope>
             </dependency>
 
+            <!-- Bone CP -->
+            <dependency>
+                <groupId>com.jolbox</groupId>
+                <artifactId>bonecp</artifactId>
+                <version>0.8.0.RELEASE</version>
+            </dependency>
+
             <!-- Database Drivers -->
             <dependency>
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
-                <version>2.3.0</version>
+                <version>2.3.1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.3.175</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.26</version>
+                <version>5.1.29</version>
                 <scope>test</scope>
             </dependency>
 
