--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,10 @@
         <jdk.version>1.7</jdk.version>
         <scala.version>2.10.3</scala.version>
         <scala.main.version>2.10</scala.main.version>
+        <akka.version>2.2.3</akka.version>
 
         <springframework.version>4.0.2.RELEASE</springframework.version>
-        <hibernate.version>4.3.1.Final</hibernate.version>
+        <hibernate.version>4.3.2.Final</hibernate.version>
         <querydsl.version>3.3.0</querydsl.version>
 
         <hibernate.validator.version>5.0.1.Final</hibernate.validator.version>
@@ -146,12 +147,12 @@
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-actor_${scala.main.version}</artifactId>
-                <version>2.2.3</version>
+                <version>${akka.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-testkit_${scala.main.version}</artifactId>
-                <version>2.2.3</version>
+                <version>${akka.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -526,7 +527,6 @@
                 <version>${hibernate.version}</version>
             </dependency>
 
-
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-testing</artifactId>
@@ -539,6 +539,7 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-ehcache</artifactId>
                 <version>${hibernate.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <!-- Hibernate-Validator -->
