-. h2 data setting 변경.

--- a/pom.xml
+++ b/pom.xml
@@ -825,6 +825,7 @@
                         <javacArg>${jdk.version}</javacArg>
                     </javacArgs>
                     <jvmArgs>
+                        <jvmArg>-server</jvmArg>
                         <jvmArg>-Xms128m</jvmArg>
                         <jvmArg>-Xmx4096m</jvmArg>
                     </jvmArgs>
