--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.github.debop4s</groupId>
         <artifactId>debop4s-parent</artifactId>
 
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
