--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,14 @@
     <groupId>com.github.debop4s</groupId>
     <artifactId>debop4s-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
 
     <modules>
         <module>debop4s-core</module>
         <module>debop4s-timeperiod</module>
         <module>debop4s-redis</module>
         <module>debop4s-data</module>
+        <module>debop4s-mongo</module>
     </modules>
 
     <properties>
@@ -24,7 +25,7 @@
 
         <springframework.version>4.0.2.RELEASE</springframework.version>
         <hibernate.version>4.3.2.Final</hibernate.version>
-        <querydsl.version>3.3.0</querydsl.version>
+        <querydsl.version>3.3.1</querydsl.version>
 
         <hibernate.validator.version>5.0.1.Final</hibernate.validator.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -73,12 +74,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-        </dependency>
-
-        <!-- project lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
         </dependency>
 
         <!-- Test -->
@@ -472,12 +467,12 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-mongodb</artifactId>
-                <version>1.3.3.RELEASE</version>
+                <version>1.4.0.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-mongodb-cross-store</artifactId>
-                <version>1.3.3.RELEASE</version>
+                <version>1.4.0.RELEASE</version>
             </dependency>
 
             <!-- Spring Boot -->
@@ -575,6 +570,11 @@
             </dependency>
             <dependency>
                 <groupId>com.mysema.querydsl</groupId>
+                <artifactId>querydsl-codegen</artifactId>
+                <version>${querydsl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.mysema.querydsl</groupId>
                 <artifactId>querydsl-jpa-codegen</artifactId>
                 <version>${querydsl.version}</version>
             </dependency>
@@ -584,11 +584,11 @@
                 <version>${querydsl.version}</version>
             </dependency>
 
-            <!-- MongoDB -->
+            <!-- Mongo Client -->
             <dependency>
-                <groupId>org.mongodb</groupId>
-                <artifactId>mongo-java-driver</artifactId>
-                <version>2.11.3</version>
+                <groupId>org.reactivemongo</groupId>
+                <artifactId>reactivemongo_${scala.main.version}</artifactId>
+                <version>0.10.0</version>
             </dependency>
 
             <!-- Redis Client for Scala -->
@@ -806,8 +806,6 @@
                 <version>3.1.6</version>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
-                    <!--<recompileMode>incremental</recompileMode>-->
-                    <!--<useZincServer>true</useZincServer>-->
                     <analysisCacheFile>${project.build.outputDirectory}/analysis-cache-file</analysisCacheFile>
                     <testAnalysisCacheFile>${project.build.testOutputDirectory}/test-analysis-cache-file
                     </testAnalysisCacheFile>
@@ -838,6 +836,17 @@
                             <goal>add-source</goal>
                             <goal>compile</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-compile-generated</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDir>target/jpa-export</sourceDir>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>scala-test-compile</id>
