-. add mysql-async library

--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -138,6 +138,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.mauricio</groupId>
+            <artifactId>mysql-async_${scala.main.version}</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
